--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -46,22 +46,21 @@ Still, the 850k array covers \~850,000 CpG sites which is \~3% of all CpGs in th
 
 ## Placental DNA methylation variation across human populations
 
-Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNA methylation (DNAm) exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012].
-Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment.
-This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
+Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNA methylation (DNAm) exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012]. Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment. This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
 However, unlike genetic markers, epigenetic markers are tissue-specific, and therefore a DNAm-based method developed in a specific tissue or population may not generalize well to other tissues with unique DNAm profiles, such as the placenta.
 
 In EWAS, confounding from population stratification is most often addressed using self-reported ethnicity/race to stratify study samples across the phenotype of interest.
-But, defining ethnicity/race is a complex task requiring the interpretation of a combination of biological and social factors leading to several complications: (i) inconsistent definition of ethnicity/race categories between individuals/organizations [@sankar2007; @mersha2015]; (ii) self-reporting more than one ethnicity/race [@kaneshiro2011]; and (iii) missing ethnicity information altogether.
-To overcome the limitations of ethnicity/race categories, genetically-defined ancestry can be used [@banda2015] as an alternative measure of population-specific variation.
-In contrast to the discrete nature of ethnicity/race categories, genetic ancestry can be expressed as several continuous variables that reflect ancestry composition [@pritchard1999].
+But, defining ethnicity/race is a complex task requiring the interpretation of a combination of biological and social factors leading to several complications: (i) inconsistent definition of ethnicity/race categories between individuals/organizations [@sankar2007; @mersha2015]; (ii) self-reporting more than one ethnicity/race [@kaneshiro2011]; and (iii) missing ethnicity information altogether. To overcome the limitations of ethnicity/race categories, genetically-defined ancestry can be used [@banda2015] as an alternative measure of population-specific variation. In contrast to the discrete nature of ethnicity/race categories, genetic ancestry can be expressed as several continuous variables that reflect ancestry composition [@pritchard1999].
 
 ### Existing approaches to account for population variation in EWAS
 
 Although the importance of accounting for human population-based variation in EWAS is widely acknowledged, methods for DNAm- specific analysis are underdeveloped.
-Barfield 2014 developed a principal components analysis (PCA) -based approach to summarize genetic variation in PC variables that can be later incorporated into downstream analyses [@barfield2014] (Table \@ref(tab:ch3tab1)). This approach, which is highly similar and likely inspired from genotype -based methods of assessing genetic ancestry that are routinely used GWAS [@price2006a], was effective in a population of North American Caucasian and African American peripheral blood samples. In contrast to genotype -based genetic ancestry, population -specific signal in DNAm data is not nearly as strong; therefore, Barfield 2014 found improvements by using PCA on CpG sites that are nearby (\<50bp) single nucleotide polymorphisms (SNPs), which are where the DNA sequence at a particular genomic position often varies between individuals, and in this case, human populations. Rahmani 2017 developed an approach they refer to as EPISTRUCTURE, which is also a PCA-based approach using a subset of CpGs. In contrast to Barfield 2014's "proximity-based" approach, EPISTRUCTURE uses CpG sites that were directly associated with a nearby SNP. These CpG-SNP associations, which are often referred to as methylation quantitative trait loci (mQTLs), were identified in one of the two cohorts included in Rahmani 2017. Although EPISTRUCTURE was shown to have obvious improvements in isolating population-specific in their DNAm data, a limitation of this type of approach is that a general feature of mQTLs is that many can be highly tissue-specific [@delahaye2018; @bell2011; @fraser2012], and moreover SNPs can also be highly population-specific [@gibbs2015]. Since EPISTRUCTURE was developed in blood and in Caucasians, it remains unclear if EPISTRUCTURE can provide reasonable performance in other tissues and populations. In contrast to Barfield 2014 and EPISTRUCTURE, Zhou 2017 developed an entirely genotype-based approach by training a random forest predictor of ethnicity, using the 59-65 SNP probes on the 450k and 850k DNAm microarrays [@zhou2017b]. They show that for at least 3 broad ethnicities, Caucasians, African (Americans), and Asian (Americans), their SNP predictor performs well. However, it these SNP probes were designed for population-specific analyses in mind, and because of the small number of probes, it is unclear how robust and sensitive to additional populations Zhou 2017's SNP predictor.
+Barfield 2014 developed a principal components analysis (PCA) -based approach to summarize genetic variation in PC variables that can be later incorporated into downstream analyses [@barfield2014] (Table \@ref(tab:ch3tab1)). This approach, which is highly similar and likely inspired from genotype -based methods of assessing genetic ancestry that are routinely used GWAS [@price2006a], was effective in a population of North American Caucasian and African American peripheral blood samples. In contrast to genotype -based genetic ancestry, population -specific signal in DNAm data is not nearly as strong; therefore, Barfield 2014 found improvements by using PCA on CpG sites that are nearby (\<50bp) single nucleotide polymorphisms (SNPs), which are where the DNA sequence at a particular genomic position often varies between individuals, and in this case, human populations. Rahmani 2017 developed an approach they refer to as EPISTRUCTURE, which is also a PCA-based approach using a subset of CpGs. In contrast to Barfield 2014's "proximity-based" approach, EPISTRUCTURE uses CpG sites that were directly associated with a nearby SNP. These CpG-SNP associations, which are often referred to as methylation quantitative trait loci (mQTLs), were identified in one of the two cohorts included in Rahmani 2017. Although EPISTRUCTURE was shown to have obvious improvements in isolating population-specific in their DNAm data, a limitation of this type of approach is that a general feature of mQTLs is that many can be highly tissue-specific [@delahaye2018; @bell2011; @fraser2012], and moreover SNPs can also be highly population-specific [@gibbs2015]. Since EPISTRUCTURE was developed in blood and in Caucasians, it remains unclear if EPISTRUCTURE can provide reasonable performance in other tissues and populations. In contrast to Barfield 2014 and EPISTRUCTURE, Zhou 2017 developed an entirely genotype-based approach by training a random forest predictor of ethnicity, using the 59-65 SNP probes on the 450k and 850k DNAm microarrays [@zhou2017b].
+They show that for at least 3 broad ethnicities, Caucasians, African (Americans), and Asian (Americans), their SNP predictor performs well.
+However, it these SNP probes were designed for population-specific analyses in mind, and because of the small number of probes, it is unclear how robust and sensitive to additional populations Zhou 2017's SNP predictor.
 
 <!--- table on methods to account for population stratification in EWAS -->
+
 (ref:ch2tab1m1) Barfield et al. 2014 [@barfield2014]
 
 (ref:ch2tab1m2) EPI-STRUCTURE [@rahmani2017]
@@ -90,7 +89,7 @@ kableExtra::kbl(
 
 ## Epigenetics and placenta cell types
 
-In the early blastocyst, the majority of gamete-derived epigenetic marks have been erased [].
+In the early blastocyst, the majority of gamete-derived epigenetic marks have been erased.
 The trophectoderm will develop into one of the layers of the chorion as well as the villous trophoblast, which retains this low methylated state.
 Hypomethylation of chorionic villi as a whole reflects that trophoblast is the predominant cell type within this tissue [@grigoriu2011]. In the mouse, trophoblast hypomethylation is associated with down-regulation ofthe DNA methyltransferases, Dnmt3a, Dnmt3b, and Dnmt1a [@oda2013]. However, the role of DNMTs in human trophoblast is less clear [@novakovic2010]. In contrast, the inner cell mass undergoes de novo global DNAm. These cells are the origin of the fetal tissues, but also contribute to primitive endoderm, from which placental endothelial cells are derived, and to the extraembryonic mesoderm, from which villus stroma is derived. In addition to differences in DNAm, the early trophectoderm shows higher H3K27 methylation as well as lower levels of histone H2A and/or H4 phosphorylation [@nelissen2011]. Further differentiation processes in both trophoblast and other lineages are associated with additional DNAm changes and histone modifications at specific regulatory loci [@hemberger2007].
 
@@ -117,15 +116,14 @@ More targeted studies investigating cell-specific signatures will contribute to 
 
 ### Cell-specific placental DNA methylation
 
-A well- functioning placenta is critical for the healthy development of the fetus during pregnancy.
-DNA methylation (DNAm) profiling of the placenta has been increasingly used to characterize underlying processes associated with adverse perinatal outcomes (e.g. maternal preeclampsia, fetal growth restriction and preterm birth) as well as to study the influence of maternal exposures on epigenetic programming.
-DNAm is an epigenetic modification that can regulate or respond to changes in gene expression [@pacis2019; @razin1991]. However, because heterogeneous tissues, such as the placenta, are made up of several cell types, each with a distinct DNAm signature, whole-tissue measurements are ultimately an average of the DNAm signatures of the constituent cell types, weighted by their respective frequency in the bulk tissue sample. Therefore, changes in DNAm measured in complex tissues can often be attributed to variation in cell composition rather than DNAm changes that occur in the constituent cell populations [@holbrook2017].
+Because heterogeneous tissues, such as the placenta, are made up of several cell types, each with a distinct DNAm signature, whole-tissue measurements are ultimately an average of the DNAm signatures of the constituent cell types, weighted by their respective frequency in the bulk tissue sample.
+Therefore, changes in DNAm measured in complex tissues can often be attributed to variation in cell composition rather than DNAm changes that occur in the constituent cell populations [@holbrook2017].
 This makes interpretation of placental DNAm studies difficult until placental DNAm is characterized at a cell-specific resolution.
 
-During the first few cell divisions after fertilization, there is a wave of genome-wide erasure of DNAm, followed by de novo DNAm in the inner cell mass [@smith2012]. Deriving from the inner cell mass are fetal tissues and the mesenchymal core component of the placental chorionic villi (CV). Within the mesenchymal core, stromal cells (SC) and fetal macrophages called Hofbauer cells (HB) can be seen in the placental stroma as early as 18 days post conception [@benirschke1973], which are thought to derive from mesenchymal stem cells. HBs are distinct from decidual macrophages and fetal/maternal monocytes [@kim2012]; they display high phenotypic diversity, promoting angiogenesis early in gestation and later participating in the immune response to pathological processes and infection [@reyes2017; @reyes2018]. Placental vasculature is critically important for proper functioning of the placenta, and depends on the development of vessels beneath the trophoblast layer. These vessels are formed from endothelial cells (EC) that derive from the chorionic mesoderm [@charolidi2019]. Encompassing the mesenchymal core is a thick trophoblast (TB) epithelial cell layer, which displays a hypomethylated profile [@robinson2015]. TBs comprise a set of functionally distinct subtypes, each with their own unique function [@novakovic2017; @yuen2013]: Cytotrophoblasts (CTB) are stem-like cells that harbor regenerative abilities and give rise to the two major subtypes of TB, the extravillous trophoblast (EVT) and the syncytiotrophoblast (STB).
-EVT are motile cells that travel to maternal tissue and remodel maternal vasculature, while STB are a multi-nucleated epithelial layer lining the CV that perform critical roles in hormone production and nutrient transfer.
+During the first few cell divisions after fertilization, there is a wave of genome-wide erasure of DNAm, followed by de novo DNAm in the inner cell mass [@smith2012]. Deriving from the inner cell mass are fetal tissues and the mesenchymal core component of the placental chorionic villi. Within the mesenchymal core, stromal cells (SC) and fetal macrophages called Hofbauer cells (HB) can be seen in the placental stroma as early as 18 days post conception [@benirschke1973], which are thought to derive from mesenchymal stem cells. HBs are distinct from decidual macrophages and fetal/maternal monocytes [@kim2012]; they display high phenotypic diversity, promoting angiogenesis early in gestation and later participating in the immune response to pathological processes and infection [@reyes2017; @reyes2018]. Placental vasculature is critically important for proper functioning of the placenta, and depends on the development of vessels beneath the trophoblast layer. These vessels are formed from endothelial cells (EC) that derive from the chorionic mesoderm [@charolidi2019]. Encompassing the mesenchymal core is a thick trophoblast (TB) epithelial cell layer, which displays a hypomethylated profile [@robinson2015]. TBs comprise a set of functionally distinct subtypes, each with their own unique function [@novakovic2017; @yuen2013]: Cytotrophoblasts (CTB) are stem-like cells that harbor regenerative abilities and give rise to the two major subtypes of TB, the extravillous trophoblast (EVT) and the syncytiotrophoblast (STB).
+EVT are motile cells that travel to maternal tissue and remodel maternal vasculature, while STB are a multi-nucleated epithelial layer lining the chorionic villi that perform critical roles in hormone production and nutrient transfer.
 
-As a consequence of its distinct developmental origin, dramatic differences in DNAm between placenta and somatic tissues have been observed [@robinson2015]. Globally, the placenta is hypomethylated compared to other tissues, which was originally attributed to reduced methylation of repetitive element DNAm [@cotton2009; @perrin2007], but was later resolved to be primarily due to placental-specific partially methylated domains (PMDs) [@schroeder2013]. PMDs are long regions of intermediate/low DNAm surrounded by regions of higher DNAm that exist in a highly cell-specific fashion [@salhab2018]. It is unclear if these PMDs have a distinct function or are footprints of earlier developmental events between embryonic and extraembryonic tissues. Parent-of origin specific DNAm, which is associated with genomic imprinting, is also more commonly found in the placenta than other tissues [@renfree2013]. Almost all known imprinted genes are imprinted in the placenta, and many are exclusively imprinted in the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. Interestingly, a number of placental-specific imprinted genes are polymorphically imprinted [@hanna2016]. It is possible that cellular and genetic heterogeneity can contribute to polymorphic imprinting, as well as variability in DNAm generally. Supporting this, a significant role for genetic control of placental DNAm variation was recently characterized [@delahaye2018].
+As a consequence of its distinct developmental origin, dramatic differences in DNAm between placenta and somatic tissues have been observed [@robinson2015]. Globally, the placenta is hypomethylated compared to other tissues, which was originally attributed to reduced methylation of repetitive element DNAm [@cotton2009; @perrin2007], but was later resolved to be primarily due to placental-specific PMDs [@schroeder2013]. PMDs are long regions of intermediate/low DNAm surrounded by regions of higher DNAm that exist in a highly cell-specific fashion [@salhab2018]. It is unclear if these PMDs have a distinct function or are footprints of earlier developmental events between embryonic and extraembryonic tissues. Parent-of origin specific DNAm, which is associated with genomic imprinting, is also more commonly found in the placenta than other tissues [@renfree2013]. Almost all known imprinted genes are imprinted in the placenta, and many are exclusively imprinted in the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. Interestingly, a number of placental-specific imprinted genes are polymorphically imprinted [@hanna2016]. It is possible that cellular and genetic heterogeneity can contribute to polymorphic imprinting, as well as variability in DNAm generally. Supporting this, a significant role for genetic control of placental DNAm variation was recently characterized [@delahaye2018].
 These studies have contributed to our understanding of the unique epigenetics of the placenta, but it remains unclear if these features are maintained in all constituent placental cell types or are confined to specific ones.
 
 ### Cell deconvolution
