--- a/Sections/12_Discussion.Rmd
+++ b/Sections/12_Discussion.Rmd
@@ -4,14 +4,44 @@ output:
     toc : no
     keep_tex: no
     number_sections: yes
+bibliography: references.bib
 ---
 
-<!-- This section is mandatory! -->
+This chapter is original and unpublished
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nulla malesuada, auctor arcu at, tempor nibh. Etiam ultricies dictum nisi eu vulputate. Suspendisse tempor aliquam efficitur. Curabitur eget orci ac purus hendrerit laoreet. Proin porta arcu nisl, a fermentum tellus suscipit et. Nulla mattis orci ac tortor facilisis venenatis. Phasellus a velit tristique, tincidunt purus id, aliquet tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed et turpis sed odio faucibus aliquam nec eget est.
+## Summary and significance of findings
 
-Phasellus ligula lacus, euismod posuere pretium sit amet, ornare condimentum nisl. Integer eu aliquet lectus, sit amet sagittis turpis. Etiam tempus bibendum nibh, eu accumsan sapien. Suspendisse tincidunt sit amet nisi vel consectetur. Donec vitae odio elit. Quisque dignissim risus feugiat nunc tempor hendrerit. Fusce consequat lectus eget felis tempus, et lobortis ante ornare. Etiam euismod quam eu scelerisque mattis. Praesent nisi lectus, tincidunt nec sapien ac, fermentum pellentesque orci.
+<!-- In this dissertation I investigated... -->
 
-Praesent semper faucibus mauris, in suscipit quam mattis et. Curabitur malesuada placerat magna. Morbi eget bibendum purus, sollicitudin faucibus enim. Donec condimentum arcu quis eros placerat sodales. Nunc non elit sodales, blandit risus vel, mattis odio. Nullam in aliquet ligula, ut viverra enim. Aliquam viverra justo non neque consequat dictum. Nunc tempor arcu sem, non blandit nisl dapibus eu. Donec vitae pretium magna. Nam risus augue, ultricies ac sollicitudin ut, rutrum eleifend purus. Donec lorem turpis, lacinia quis pretium non, sollicitudin eu enim. Curabitur eu eros congue, vehicula ante vitae, semper elit.
+In this dissertation, I investigated some of the major sources of variation of placental DNAm: genetics and human populations, cell type DNAm, and the presence of maternal cells in placental tissues.
+Regarding these, I discovered the following insights.
+Ethnicity and genetic ancestry can be accurately predicted from placental DNAm microarray data, using both DNAm markers and SNPs.
+Many placental-specific DNAm features, such as PMDs, placental-specific imprinting, and repetitive element DNAm, can be found in trophoblast populations, and are often not present in the other constituent placental cell types.
+Lastly, I found that maternal contamination can occur in placental samples and can be bioinformatically identified from previous placental DNAm studies.
 
-Fusce feugiat consectetur erat, nec venenatis massa malesuada nec. Curabitur varius convallis sem eget efficitur. Morbi congue odio non turpis cursus efficitur. In hac habitasse platea dictumst. Cras porttitor porttitor nibh id tempor. Sed bibendum quam nisl, sed congue lectus condimentum et. Curabitur nec mauris sapien. Morbi dictum ex sodales turpis ornare mattis. Suspendisse potenti. Pellentesque commodo lorem purus, id mattis nibh efficitur et. Cras tempus rutrum interdum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris placerat ligula eu nisl sagittis consequat. Curabitur placerat, elit quis cursus tempor, mauris augue posuere metus, ut elementum orci diam maximus lectus. Proin sed sodales nulla. Maecenas non sapien nec mauris facilisis fringilla.
+<!--Chapter 2 -->
+
+The ethnicity predictor trained on 450k placental DNAm data builds on previous studies and adds a placental-specific approach to the toolbox of methods for accounting for population stratification and genetic ancestry in EWAS [@barfield2014; @rahmani2017; @zhou2017]. Although my placental ethnicity predictor, planet, was trained on self-reported ethnicity, I found that the resulting modelled DNAm patterns are highly genotype-dependent, and that my ethnicity predictor is highly correlated with genetic ancestry. In the placental data that I compared planet to other approaches of inferring genetic ancestry and ethnicity, I found that my tissue-specific approach performed better. This affirms this study's original hypothesis, which was that because DNAm is highly tissue-specific, and that genotype-DNAm relationships can also be highly tissue-specific [@delahaye2018], methods to infer biological variables such as ethnicity and genetic ancestry from DNAm are likely also to be tissue-specific.
+
+Self-reported ethnicity has several shortcomings that my DNAm-based ethnicity predictor addresses.
+Self-reported ethnicity is often reported for the parents for placental studies, and is often missing from the paternal information.
+Self-reported ethnicity is also variably defined between countries, institutions, and individuals.
+In research of biological data such as DNAm, self-reported ethnicity is included as a often inadequate [@mersha2015] surrogate of genetic ancestry, which should be accounted for in any population-based study such as the common EWAS design.
+Ethnicity, or genetic ancestry, defined based on DNAm or genotyping data, which are reproducible and measurable, addresses these shortcomings of self-reported ethnicity.
+It is unclear if DNAm-based genetic ancestry and ethnicity is more appropriate to use in EWAS compared to using genetic ancestry based on genotyping information, but in the absence of genotyping data, I demonstrate that DNAm-based genetic ancestry and ethnicity is a highly useful alternative to self-reported ethnicity.
+
+<!--Chapter 3 -->
+
+<!--Chapter 4 -->
+
+## Strengths and limitations
+
+Data integretiy and careful analysis
+
+## Future directions
+
+Incorporating bioinformatic techniques into placental EWAS
+
+## Conclusion
+
+Our understanding of variation in placental DNAm
