correct bibbliography file

--- a/Sections/11_Chapter_4.Rmd
+++ b/Sections/11_Chapter_4.Rmd
@@ -4,6 +4,7 @@ output:
     toc : no
     keep_tex: no
     number_sections: yes
+bibliography: ../References/references.bib
 ---
 
 ## Introduction
