--- a/References/references.bib
+++ b/References/references.bib
@@ -2001,3 +2001,74 @@ PMCID: PMC7705927}
 PMCID: PMC5526324},
 	langid = {eng}
 }
+
+@article{yuan2021,
+	title = {Cell-specific characterization of the placental methylome},
+	author = {{Yuan}, {Victor} and {Hui}, {Desmond} and {Yin}, {Yifan} and {Peñaherrera}, {Maria S.} and {Beristain}, {Alexander G.} and {Robinson}, {Wendy P.}},
+	year = {2021},
+	month = {01},
+	date = {2021-01-06},
+	journal = {BMC Genomics},
+	pages = {6},
+	volume = {22},
+	number = {1},
+	doi = {10.1186/s12864-020-07186-6},
+	url = {https://doi.org/10.1186/s12864-020-07186-6}
+}
+
+@article{lee2019,
+	title = {Placental epigenetic clocks: estimating gestational age using placental DNA methylation levels},
+	author = {{Lee}, {Yunsung} and {Choufani}, {Sanaa} and {Weksberg}, {Rosanna} and {Wilson}, {Samantha L.} and {Yuan}, {Victor} and {Burt}, {Amber} and {Marsit}, {Carmen} and {Lu}, {Ake T.} and {Ritz}, {Beate} and {Bohlin}, {Jon} and {Gjessing}, {Håkon K.} and {Harris}, {Jennifer R.} and {Magnus}, {Per} and {Binder}, {Alexandra M.} and {Robinson}, {Wendy P.} and {Jugessur}, {Astanand} and {Horvath}, {Steve}},
+	year = {2019},
+	month = {06},
+	date = {2019-06-24},
+	journal = {Aging (Albany NY)},
+	pages = {4238--4253},
+	volume = {11},
+	number = {12},
+	doi = {10.18632/aging.102049},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6628997/},
+	note = {PMID: 31235674
+PMCID: PMC6628997}
+}
+
+@article{cappelletti2020,
+	title = {Immunobiology of Acute Chorioamnionitis},
+	author = {{Cappelletti}, {Monica} and {Presicce}, {Pietro} and {Kallapur}, {Suhas G.}},
+	year = {2020},
+	month = {04},
+	date = {2020-04-16},
+	journal = {Frontiers in Immunology},
+	pages = {649},
+	volume = {11},
+	doi = {10.3389/fimmu.2020.00649},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7177011/},
+	note = {PMID: 32373122
+PMCID: PMC7177011}
+}
+
+@article{thomas2020,
+	title = {Phenotypic and functional characterization of first-trimester human placental macrophages, Hofbauer cells},
+	author = {{Thomas}, {Jake R.} and {Appios}, {Anna} and {Zhao}, {Xiaohui} and {Dutkiewicz}, {Roksana} and {Donde}, {Maria} and {Lee}, {Colin Y.C.} and {Naidu}, {Praveena} and {Lee}, {Christopher} and {Cerveira}, {Joana} and {Liu}, {Bing} and {Ginhoux}, {Florent} and {Burton}, {Graham} and {Hamilton}, {Russell S.} and {Moffett}, {Ashley} and {Sharkey}, {Andrew} and {McGovern}, {Naomi}},
+	year = {2020},
+	month = {10},
+	date = {2020-10-19},
+	journal = {Journal of Experimental Medicine},
+	volume = {218},
+	number = {1},
+	doi = {10.1084/jem.20200891},
+	url = {https://doi.org/10.1084/jem.20200891}
+}
+
+@article{fogarty2011,
+	title = {A quantitative analysis of transcriptionally active syncytiotrophoblast nuclei across human gestation},
+	author = {{Fogarty}, {N M E} and {Mayhew}, {T M} and {Ferguson-Smith}, {A C} and {Burton}, {G J}},
+	year = {2011},
+	date = {2011},
+	journal = {Journal of Anatomy},
+	pages = {601--610},
+	volume = {219},
+	number = {5},
+	doi = {10.1111/j.1469-7580.2011.01417.x},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3222839/pdf/joa0219-0601.pdf}
+}
